--- a/gnn/sweep_with_linear.yaml
+++ b/gnn/sweep_with_linear.yaml
@@ -1,13 +1,20 @@
+program: sweep_with_linear.py
 method: bayes
+name: sweep_small_linear_2y
+description: The Model Consists of a embedding layer, a Convolution Layer and a Linear Layer. For Training a 2y period is used and a 1y period for validation and testing.
 metric:
   goal: minimize
   name: best_val_loss
 parameters:
   batch_size:
-    value: 8
+    value: 32
+  linear_size:
+    values:
+      - 128
+      - 512
+      - 1024
   embed_dim:
     values:
-      - 2
       - 10
   heads:
     values:
@@ -42,4 +49,3 @@ parameters:
     values:
       - GATConvv2
       - ResGNNv2
-program: sweep.py
