--- a/gnn/sweep.yaml
+++ b/gnn/sweep.yaml
@@ -1,45 +1,34 @@
-method: bayes
+program: GNNGI.py
+method: grid
 metric:
   goal: minimize
   name: best_val_loss
 parameters:
+  generate_graph:
+    values:
+      - 3
+      - 5
+      - 10
+      - 20
+      - 50
+      - 100
   batch_size:
-    value: 8
+    values:
+      - 8
+      - 32
+      - 64
   embed_dim:
     values:
       - 2
       - 10
-  heads:
-    values:
-      - 1
-      - 4
-      - 8
-      - 16
   hidden_channels:
     values:
-      - 1
-      - 8
-      - 16
       - 32
-  learning_rate:
-    value: 0.002
-  max_dist:
-    values:
-      - 25
-      - 75
-      - 200
-  max_epochs:
-    value: 150
+      - 256
+      - 512
   num_layers:
     values:
       - 1
       - 2
       - 3
       - 4
-  patience:
-    value: 25
-  type:
-    values:
-      - GATConvv2
-      - ResGNNv2
-program: sweep.py
