--- a/gnn/experiments/small/best_ResGnn/config.yaml
+++ b/gnn/experiments/small/best_ResGnn/config.yaml
@@ -1,20 +1,20 @@
 data:
-  method: "max_dist"
-  max_dist: 100
-  nearest_k: 0
+  method: "nearest_k"
+  max_dist: 0
+  nearest_k: 10
   nearest_k_mode: "in"
   use_corr: False
 
 model:
   architecture: "ResGnn"
-  num_layers: 2
+  num_layers: 1
   batch_size: 8
-  embed_dim: 10
-  hidden_channels: 64
+  embed_dim: 2
+  hidden_channels: 128
   heads: 2
   compile: True
   lr: 0.001
 
 training:
-  n_epochs: 76
-  patience: 76
+  n_epochs: 115
+  patience: 115
