--- a/gnn/experiments/eff_of_hyperparams/best_configs/config_ResGAT.yaml
+++ b/gnn/experiments/eff_of_hyperparams/best_configs/config_ResGAT.yaml
@@ -1,23 +1,20 @@
 data:
   method: "max_dist"
-  max_dist: 30
+  max_dist: 200
   nearest_k: 0
   nearest_k_mode: "in"
   use_corr: False
 
 model:
-  architecture: "GNNGI"
+  architecture: "ResGnn"
   num_layers: 1
   batch_size: 8
   embed_dim: 10
-  hidden_channels: 128
-  heads: 0
-  compile: False
+  hidden_channels: 256
+  heads: 1
+  compile: True
   lr: 0.001
 
 training:
-  n_epochs: 90
-  patience: 90
-
-
-
+  n_epochs: 89
+  patience: 89
